# pactkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/architecture/governance/: lessons.md  rules.md
docs/architecture/graphs/: system_design.mmd
docs/product/: context.md  sprint_board.md
docs/product/archive/: archive_202602.md
docs/specs/: BUG-001.md  BUG-002.md  STORY-001.md  STORY-002.md  STORY-003.md  STORY-004.md  STORY-005.md  STORY-006.md  STORY-007.md  STORY-008.md  STORY-009.md  STORY-010.md  STORY-011.md  STORY-012.md  STORY-013.md
docs/test_cases/: BUG-001_case.md  BUG-002_case.md
src/pactkit/: __init__.py  cli.py  common_user.py  config.py  scripts.py  utils.py
src/pactkit/generators/: deployer.py
src/pactkit/prompts/: __init__.py  agents.py  commands.py  references.py  rules.py  skills.py  workflows.py
src/pactkit/skills/: __init__.py  board.py  scaffold.py  visualize.py
tests/unit/: test_agent_features.py  test_agent_frontmatter.py  test_agents_enrichment.py  test_board_sections.py  test_bug001_skill_path.py  test_bug002_plugin_paths.py  test_check_command.py  test_command_frontmatter.py  test_command_visualize_modes.py  test_common_user.py  test_config.py  test_config_auto_merge.py  test_constitution_sharpening.py  test_create_skill.py  test_deployer_cleanup.py  test_deployer_plugin.py  test_design_command.py  test_done_gates.py  test_draw_prompt.py  test_draw_references.py  test_drawio_mcp.py  test_home_path_fix.py  test_hotfix_command.py  test_init_guard.py  test_lang_profiles.py  test_list_stories.py  test_mcp_integration.py  test_model_config.py  test_modular_constitution.py  test_multi_prefix.py  test_pdca_slim.py  test_project_visibility.py  test_prompts_package.py  test_release.py  test_release_field.py  test_release_v110.py  test_review_command.py  test_rules_enrichment.py  test_script_extraction.py  test_selective_deploy.py  (+11 more)
