[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pactkit"
version = "1.0.0"
description = "Spec-driven agentic DevOps toolkit for AI coding assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Slim" },
]
keywords = [
    "ai",
    "agent",
    "spec-driven",
    "devops",
    "scaffold",
    "claude-code",
    "tdd",
    "pdca",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://pactkit.dev"
Repository = "https://github.com/pactkit/pactkit"
Documentation = "https://pactkit.dev/docs"
Issues = "https://github.com/pactkit/pactkit/issues"

[project.scripts]
pactkit = "pactkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pactkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
