[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pactkit"
version = "1.1.0"
description = "Spec-driven agentic DevOps toolkit for AI coding assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]
authors = [
    { name = "Slim" },
]
keywords = [
    "ai",
    "agent",
    "claude",
    "anthropic",
    "claude-code",
    "multi-agent",
    "code-assistant",
    "code-quality",
    "developer-tools",
    "spec-driven",
    "devops",
    "scaffold",
    "tdd",
    "pdca",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://pactkit.dev"
Repository = "https://github.com/pactkit/pactkit"
Documentation = "https://pactkit.dev/docs"
Issues = "https://github.com/pactkit/pactkit/issues"

[project.scripts]
pactkit = "pactkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pactkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/pactkit/prompts/__init__.py" = ["F401"]
"src/pactkit/prompts/agents.py" = ["E501"]
"src/pactkit/prompts/commands.py" = ["E501"]
"src/pactkit/prompts/references.py" = ["E501"]
"src/pactkit/prompts/rules.py" = ["E501"]
"src/pactkit/prompts/skills.py" = ["E501"]
"src/pactkit/prompts/workflows.py" = ["E501"]
"src/pactkit/generators/deployer.py" = ["E402"]
"src/pactkit/skills/*.py" = ["E501", "E701", "E702", "E722", "E731"]
"src/pactkit/scripts.py" = ["E501"]
"tests/**/*.py" = ["E402", "E501", "E741", "F841"]
